Main Changelog:
	- Potential fix to "Made of Glass" trait injuring people after waking up.
	