@@ -81,8 +81,8 @@ Sandbox_EN = {
     Sandbox_MoreTraits_NonlethalAlcoholic_tooltip = "Players who take the alcoholic trait can never die from alcohol poisoning, but will still suffer periodic withdrawal.",
     Sandbox_MoreTraits_SecondWindCooldown = "Second Wind Recharge",
     Sandbox_MoreTraits_SecondWindCooldown_tooltip = "After how much days should Second Wind recharge?",
-	Sandbox_MoreTraits_GymGoerNoExerciseFatigue = "Gym Goer Removes Exercise Fatigue",
-	Sandbox_MoreTraits_GymGoerNoExerciseFatigue_tooltip = "Should Gym Goer eliminate exercise fatigue?<br>If this option is un-checked, players with Gym Goer will suffer from exercise fatigue as normal.",
+	Sandbox_MoreTraits_GymGoerNoExerciseFatigue = "Gym Goer Exercise Fatigue",
+	Sandbox_MoreTraits_GymGoerNoExerciseFatigue_tooltip = "Should Gym Goer affect Exercise Fatigue?<br>If this option is un-checked, players with Gym Goer will suffer from exercise fatigue as normal.",
 	Sandbox_MoreTraits_HardyEndurance = "Hardy Endurance",
 	Sandbox_MoreTraits_HardyEndurance_tooltip = "How much extra endurance should hardy give?",
 	Sandbox_MoreTraits_ImmunoChance = "Immunocompromised Chance",
@@ -107,4 +107,10 @@ Sandbox_EN = {
 	Sandbox_MoreTraits_ProwessGunsAmmoRestore_tooltip = "If true, Prowess: Guns will have a chance to not consume ammo. Not exactly lore-wise friendly, but fun.",
 	Sandbox_MoreTraits_EvasiveBlocksPVP = "Evasive Dodges PVP Attacks",
 	Sandbox_MoreTraits_EvasiveBlocksPVP_tooltip = "If true, Evasive can dodge attacks from other players.",
+	Sandbox_MoreTraits_BurnedDistance = "Burn Ward Patient Distance",
+	Sandbox_MoreTraits_BurnedDistance_tooltip = "Distance at which Burn Ward Patient gets activated by fire.<br>Keep in mind, the higher this value is, the more panic and anxiety you will get from being close.<br>Warning: Higher values might lead to FPS issues",
+	Sandbox_MoreTraits_BurnedPanic = "Burn Ward Panic",
+	Sandbox_MoreTraits_BurnedPanic_tooltip = "Panic you will get from Burn Ward Patient.<Br>Scaling works by repeatedly adding panic until max distance number is reached, starting from distance of closest fire.<br>What this means is, if fire is 1 tile away and max is 20, it will give 20x panic than this number. This happens every one minute in-game.",
+	Sandbox_MoreTraits_BurnedStress = "Burn Ward Stress",
+	Sandbox_MoreTraits_BurnedStress_tooltip = "Stress you will get from Burn Ward Patient.<Br>Scaling works by repeatedly adding stress until max distance number is reached, starting from distance of closest fire.<br>What this means is, if fire is 1 tile away and max is 20, it will give 20x stress than this number. This happens every one minute in-game.",
 }
