@@ -138,7 +138,7 @@ UI_EN = {
     UI_trait_fearful = "Fearful",
     UI_trait_fearfuldesc = "You're easily scared and likely to scream aloud if panicked.",
     UI_trait_gymgoer = "Gym-Goer",
-    UI_trait_gymgoerdesc = "You enjoy working out.<br>Exercise is twice as effective for you and you do not experience exercise fatigue.<br>+1 Fitness<br>+1 Strength",
+    UI_trait_gymgoerdesc = "You enjoy working out.<br>Exercise is twice as effective for you.<br>Exercise Fatigue increases very slowly and decreases thrice as fast.<br>+1 Fitness<br>+1 Strength",
     UI_trait_noodlelegs = "Noodle Legs",
     UI_trait_noodlelegsdesc = "You constantly tripped when going out for morning jogs.<br>Chance to trip when running and sprinting.<br>Chance decreases based on your sprinting and nimble level.",
     UI_trait_secondwind = "Second Wind",
@@ -177,7 +177,9 @@ UI_EN = {
     UI_trait_mundane = "Mundane",
     UI_trait_mundanedesc = "Your weapon attacks will never critically hit.<br>This includes any critical bonuses from traits such as Prowess.<br>Any other damage bonuses still apply properly.",
     UI_trait_burned = "Burn Ward Patient",
-    UI_trait_burneddesc = "You begin the game covered head-to-toe in burns.<br>This is not for the faint of heart. Burns take a long time to heal and will make walking, fighting, or performing tasks excruciatingly slow.<br>Your wounds will be bandaged initially.<br>This trait can not be taken alongside Injured or Broke Leg, as it overrides those wounds. It is however worth considerably more than those two traits combined.",
+    UI_trait_burneddesc = "Your past experience with fire affected your mental health. Your body recovered, but your soul didn't.<br>Observing fire gives you panic and anxiety, this effect scales based on the distance between you and the fire.<br>Prevents you from throwing fire bombs, molotov cocktails and starting campfires.",
+	UI_burnedcannotequip = "Your fear of fire prevents you from holding this item!",
+	UI_burnedstop = "Your fear of fire prevents you from setting fire!",
     UI_trait_deprived = "Deprived",
     UI_trait_depriveddesc = "You begin the game with absolutely nothing - not even clothes!",
     UI_trait_fitted = "Well-Fitted",
