@@ -1,3 +1,5 @@
 Main Changelog:
-	- Potential fix to "Made of Glass" trait injuring people after waking up.
+	- Burn Ward Patient Rework - Seeing fire gives you panic and stress relative to distance between you and fire, you cannot equip molotovs, fire bombs and cannot start campfires. 18 Points -> 7 Points
+	- 3 New Sandbox Settings for Burn Ward Patient
+	- Gym Goer Change - No longer gets rid of Exercise Fatigue, Exercise Fatigue now increases very slowly and decreases 3x as fast. Therefore the effects and how long you have Exercise Fatigue is reduced. 
 	
